--- a/workbench/ngungut/nccms/composer.json
+++ b/workbench/ngungut/nccms/composer.json
@@ -13,7 +13,13 @@
     },
     "autoload": {
         "classmap": [
-            "src/migrations"
+            "src/abstract",
+            "src/lang",
+            "src/controllers",
+            "src/libraries",
+            "src/models",
+            "src/seeds",
+            "src/traits"
         ],
         "psr-0": {
             "Ngungut\\Nccms\\": "src/"
